Replace minified JSON strings with JDK 21 text blocks for readability
Also replace Arrays.asList with List.of in PathExpBooking.

Made-with: Cursor